# libbismuth

./: .gitignore  README.md  libbismuth.syms  meson.build  meson_options.txt
.github/workflows/: docs.yml
doc/: libbismuth.toml.in  meson.build
src/: bis-album.c  bis-album.h  bis-animation-private.h  bis-animation-target-private.h  bis-animation-target.c  bis-animation-target.h  bis-animation-util.c  bis-animation-util.h  bis-animation.c  bis-animation.h  bis-bidi-private.h  bis-bidi.c  bis-bin.c  bis-bin.h  bis-carousel-indicator-dots.c  bis-carousel-indicator-dots.h  bis-carousel-indicator-lines.c  bis-carousel-indicator-lines.h  bis-carousel.c  bis-carousel.h  bis-clamp-layout.c  bis-clamp-layout.h  bis-clamp-scrollable.c  bis-clamp-scrollable.h  bis-clamp.c  bis-clamp.h  bis-deprecation-macros.h  bis-easing.c  bis-easing.h  bis-enum-list-model.c  bis-enum-list-model.h  bis-flap.c  bis-flap.h  bis-fold-threshold-policy.c  bis-fold-threshold-policy.h  bis-gizmo-private.h  bis-gizmo.c  bis-gtkbuilder-utils-private.h  bis-gtkbuilder-utils.c  bis-hugger.c  (+44 more)
